<resources>
    <string name="app_name">project</string>
    <string name="hint_set">Set</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_reps">Reps</string>
    <string name="hint_exercise_name">Exercise name</string>
    <string name="reps">reps</string>
    <string name="set">Set</string>
    <string name="kg">kg</string>

    <string-array name="muscles">
        <item>Abs</item>
        <item>Back</item>
        <item>Biceps</item>
        <item>Chest</item>
        <item>Legs</item>
        <item>Shoulders</item>
        <item>Triceps</item>
    </string-array>
</resources>
