<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:padding="5dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:id="@+id/title_sets"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:gravity="start" />

        <Space
            android:layout_width="40dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_weight"
            android:id="@+id/title_weight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:gravity="start" />

        <Space
            android:layout_width="60dp"
            android:layout_height="match_parent" />


        <TextView
            android:id="@+id/title_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_weight="0"
            android:gravity="start"
            android:text="@string/reps"
            android:textAppearance="?android:attr/textAppearanceMedium" />


    </LinearLayout>

</LinearLayout>